--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 #spring.datasource.username=zagrebaev
 #spring.datasource.password=Zagrebaev1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port = 9090
+server.address = 127.0.0.1
