--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-#spring.datasource.url=jdbc:mysql://localhost:3307/forum
-#spring.datasource.username=zagrebaev
-#spring.datasource.password=Zagrebaev1
+spring.datasource.url=jdbc:mysql://localhost:3307/forum
+spring.datasource.username=zagr
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=15
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.min-idle=5
+spring.datasource.tomcat.test-on-borrow=true
+
 server.port = 9090
 server.address = 127.0.0.1
