--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/forum
-spring.datasource.username=zagr
-spring.datasource.password=123
+spring.datasource.username=zagrebaev
+#spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
