--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/forum
+spring.datasource.url=jdbc:mysql://localhost:3306/forum?characterEncoding=utf8
 spring.datasource.username=zagrebaev
+#spring.datasource.username=root
 #spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
