--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/forum?characterEncoding=utf8
-spring.datasource.username=zagrebaev
-#spring.datasource.username=root
-#spring.datasource.password=123
+#spring.datasource.username=zagrebaev
+spring.datasource.username=root
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
 
 
 spring.datasource.tomcat.max-wait=10000
